# SimpleSlicer

./: CMakeLists.txt  Converter.h  DirIO.cpp  DirIO.h  Histology.cpp  Histology.h  OpencvViewer.cpp  OpencvViewer.h  SimpleGUI.ui  SlicerGUI.cpp  SlicerGUI.h  SlicerMain.cpp
